--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.4.4",
     "lodash.debounce": "^4.0.8",
+    "mathjs": "^6.6.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
