--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.4.4",
     "lodash.debounce": "^4.0.8",
     "mathjs": "^6.6.1",
+    "uuid": "^3.3.3",
     "vue": "^2.6.10"
   },
   "devDependencies": {
