--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-[*]
+[*.js]
 charset = utf-8
 end_of_line = lf
 indent_style = space
@@ -31,8 +31,12 @@ indent_style=space
 indent_size=2
 
 [*.vue]
-indent_style=space
-indent_size=2
+charset = utf-8
+end_of_line = lf
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = true
 
 [{.analysis_options,*.yml,*.yaml}]
 indent_style=space
