--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.5.2",
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "lodash.debounce": "^4.0.8",
     "mathjs": "^6.6.1",
+    "moment": "^2.24.0",
     "uuid": "^3.3.3",
     "vue": "^2.6.10"
   },
@@ -22,6 +24,7 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "mockjs2": "^1.0.8",
